<resources>
	<string name="app_name">VideOSC+</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string-array name="menu_strings">
		<item>Start/Stop sending OSC messages</item>
		<item>Switch flashlight on/off</item>
		<item>Select color mode</item>
		<item>Select interaction mode</item>
		<item>Get info on current framerate and calculation period</item>
		<item>Settings</item>
	</string-array>
	<string name="preview_image_content_description">The view for the down-scaled preview image</string>
	<string name="a_tools_menu_item">a tools menu item</string>
	<string name="show_hide_the_tools_menu">Show/Hide the tools menu</string>
	<string name="color_mode_rgb">Set color mode to RGB</string>
	<string name="color_mode_rgb_neg">Set color mode to RGB negative</string>
	<string name="color_mode_r">Set color mode to red</string>
	<string name="color_mode_g">Set color mode to green</string>
	<string name="color_mode_b">Set color mode to blue</string>
	<string name="the_current_color_mode">The current color mode</string>
	<string name="the_current_osc_status">The current OSC status</string>
	<string name="the_current_interaction_mode">The current interaction mode</string>
	<string name="the_current_torch_status">The current torch status</string>
	<string name="frame_rate_pre">FPS:</string>
	<string name="calc_period_pre">, calc. period:</string>
	<string name="quit_dialog_string">"Are you sure you want to quit VideOSC?"</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="selection_network_settings">Network Settings</string>
	<string name="selection_resolution_settings">Resolution Settings</string>
	<string name="command_device_mappings">Command-Device Mappings</string>
	<string name="selection_sensor_settings">Sensor Settings</string>
	<string name="selection_debug_settings">Debug Settings (temporary)</string>
	<string name="selection_about_videosc">About VideOSC</string>
	<string name="send_osc_to_ip">Send OSC to IP address:</string>
	<string name="default_remote_ip">192.168.1.105</string>
	<string name="send_osc_to_port">Send OSC to port:</string>
	<string name="default_remote_port">57120</string>
	<string name="device_ip_address_head">Device IP address:</string>
	<string name="device_udp_port">Device UDP port (needs app restart):</string>
	<string name="device_udp_port_value">32000</string>
	<string name="device_tcp_port">Device TCP/IP port (needs app restart):</string>
	<string name="device_tcp_port_value">32100</string>
	<string name="root_command_name_head">Command namespace:</string>
	<string name="slash">/</string>
	<string name="root_cmd_name">vosc</string>
	<string name="sub_cmd_name"><![CDATA[/<sub_cmd_name>]]></string>
	<string name="cancel">@android:string/cancel</string>
	<string name="save_settings">save settings</string>
	<string name="horizontal_resolution">Horizontal resolution:</string>
	<string name="vertical_resolution">Vertical resolution:</string>
	<string name="fixed_frame_rate">Fixed framerate. Unchecking this option may improve color recoginition in dark environments yet result in a decreased frame rate.</string>
	<string name="set_calculation_period">Set calculation period:</string>
	<string name="normalize_output_text">Normalize output (0.0&#8211;1.0, does not apply to sensor values).</string>
	<string name="remember_activated_text">Remember activated/deactivated/fixed pixels on quit.</string>
	<string name="orientation_sensor">Orientation sensor: Rotation in degrees – \'/%1$s/ori\', x, y, z, timestamp, accuracy</string>
	<string name="accelerometer">Accelerometer: Force in m/s^2 – \'/%1$s/acc\', x, y, z, timestamp, accuracy</string>
	<string name="linear_acceleration">Linear acceleration sensor: m/s^2 minus gravity – \'/%1$s/lin_acc\', x, y, z, timestamp, accuracy</string>
	<string name="magnetic_field_sensor">Magnetic field sensor: Geomagnetic field in µT – \'/%1$s/mag\', x, y, z, timestamp, accuracy</string>
	<string name="gravity_sensor">Gravity sensor: Force of gravity in m/s^2 – \'/%1$s/grav\', x, y, z, timestamp, accuracy</string>
	<string name="proximity_sensor">Proximity sensor: Distance from sensor, typically 0, 5 – \'/%1$s/prox\', distance, timestamp, accuracy</string>
	<string name="light_sensor">Light sensor: Illumination from sensor in lx – \'/%1$s/light\', illumination, timestamp, accuracy</string>
	<string name="air_pressure">Air pressure sensor: Ambient pressure in hPa or mbar – \'/%1$s/press\', pressure, timestamp, accuracy</string>
	<string name="temperature_sensor">Temperature sensor: Temperature in °C – \'/%1$s/temp\', temperature</string>
	<string name="geo_location_sensor">Geo location: \'/%1$s/loc\', latitude, longitude, altitude</string>
	<string name="humidity_sensor">Humidity sensor: Humidity in %% – \'/%1$s/hum\', humidity</string>
	<string name="camera_request_permission">VideOSC needs the camera permission</string>
	<string name="zoom_info">zoom:</string>
	<string name="curr_active_camera">The currently active camera</string>
	<string name="select_framerate_min_max">Select framerate (min/max fps):</string>
	<string name="msg_on_camera_open_fail">The camera failed to open. Possibly you will have to restart the device.</string>
	<string name="OK">OK</string>
	<string name="hide_pixel_image_overlay">Hide pixel image overlay</string>
	<string name="count_messages">Report the number of OSC bundles created vs. the number of actually sent OSC bundles in OSC messages \'/num_red_bundles\', \'/num_green_bundles\' and \'/num_blue_bundles\'.</string>
	<string name="debug_eplanation">The following settings will not get stored permanently. They will get reset with every restart of VideOSC.</string>
	<string name="fix_exposure_temporary">Fix exposure temporarily (will be reset on restart)</string>
	<string name="set_exposure_to_fixed">Set exposure to fixed</string>
	<string name="dont_fix_exposure">Don\'t fix exposure</string>
	<string name="exposure_toast_text">Point your device at the lighting situation you want the camera exposure to be set to and hit OK.</string>
	<string name="grant">grant</string>
	<string name="deny">deny</string>
	<string name="ask_for_settings_permission">Permissions to write settings not granted. Shall they be granted?</string>
	<string name="settings_request_permissions">VideOSC needs to be able to save settings.</string>
	<string name="write_settings_permission_granted">Permissions to write settings granted.</string>
	<string name="write_settings_permission_denied">Permissions to write settings were denied</string>
	<string name="camera_permission_required">Camera permission is required to display the camera preview.</string>
	<string name="camera_permission_not_available">Permission is not available. Requesting camera permission.</string>
	<string name="camera_permissions_granted">Camera permissions granted. Starting preview.</string>
	<string name="camera_permissions_denied">Camera Permission was denied.</string>
	<string name="protocol_label">"\n(protocol: %1$s)"</string>
	<string name="outline_for_a_multislider_bar">outline for a multislider bar</string>
	<string name="multislider_bar_fill">multislider bar fill</string>
	<string name="delete_edits_on_pixels">delete edits on pixels</string>
	<string name="select_pixels_stepwise">select pixels stepwise</string>
	<string name="quickly_select_pixels">quickly select pixels</string>
	<string name="apply_current_pixel_selection">apply current pixel selection</string>
	<string name="move_the_editor">move the editor</string>
	<string name="load_a_saved_snapshot">load a saved snapshot</string>
	<string name="make_a_snapshot">make a snapshot</string>
	<string name="move_the_snapshots_bar">move the snapshots bar</string>
	<string name="name_this_snapshot">name this snapshot</string>
	<string name="save_snapshot">save snapshot</string>
	<string name="save_snapshots_set">save snapshots set&#8230;</string>
	<string name="load_snapshots_set">load snapshots set&#8230;</string>
	<string name="close">close</string>
	<string name="rename_snapshot">rename snapshot</string>
	<string name="delete_snapshot">delete snapshot</string>
	<string name="activate_or_deactivate_osc_feedback">activate or deactivate OSC feedback</string>
	<string name="videosc_icon">VideOSC icon</string>
	<string name="about_videosc">VideOSC is an experimental OSC controller, using the color information retrieved from (one of) the camera(s) of your Android phone.</string>
	<string name="videosc_license">VideOSC is licensed under the Apache License Version 2.0, January 2004</string>
	<string name="show_license">SHOW LICENSE</string>
	<string name="head_other_libs">VideOSC has been created using the following freely available libraries:</string>
	<string name="oscp5_netp5_head">oscP5 / netP5</string>
	<string name="netp5_oscp5_desc">netP5 is a utility that helps with network communication. oscP5 is an implementation of the OSC protocol (Open Sound Control) that allows sending control messages between IP/based devices over the network (cable or wireless). Both, netP5 and oscP5 are licensed under the GNU Lesser General Public License [LGPLv3]. http://www.sojamo.de/code/
	</string>
	<string name="ketai_lib_head">Ketai Library</string>
	<string name="ketai_lib_desc">A kind of Swiss army knife. Licensed under the GNU Lesser General Public License v2.1. http://ketai.org/</string>
	<string name="gpuimage_head">GPUImage For Android Library</string>
	<string name="gpuimage_desc">Image filters for Android with OpenGL (based on GPUImage for iOS). Homepage: https://github.com/cats-oss/android-gpuimage. Licensed under the Apache License Version 2.0, January 2004</string>
	<string name="more_info_videosc">More information about VideOSC can be fount at http://videosc.net</string>
	<string name="videosc_github_info">The full application source code can be downloaded from http://github.com/nuss/VideOSC2</string>
	<string name="videosc_copyright">© Stefan Nussbaumer 2014-%1$s</string>
	<string name="apply_current_slider_settings">apply current slider settings</string>
	<string name="cancel_editing_pixel_values">cancel editing pixel values</string>
	<string name="values">values</string>
	<string name="mix">mix</string>
	<string name="select_framerate_min_max_1_s">Select framerate (min / max):&#160;&#160;&#160;&#160;&#160;%1$s</string>
	<string name="remote_ip_addresses">Remote IP addresses (UDP):</string>
	<string name="add_address">add address</string>
	<string name="add_port">port</string>
	<string name="add_ip_address">IP address</string>
	<string name="enter_a_valid_ip_address">enter a valid IP address</string>
	<string name="add_port_hint">add a numerical port</string>
	<string name="protocol_1_s">set protocol: %1$s</string>
	<string name="udp_receive_port">set the app\'s UDP receiving port</string>
	<string name="tcp_receive_port">set the app\'s TCP/IP receiving port</string>
	<string name="delete_address">delete address</string>
	<string name="warning_address_header">There are errors in the given entries:\n</string>
	<string name="warning_invalid_ip">\n- The given IP address is invalid!</string>
	<string name="warning_empty_ip">\n- The IP address must not be empty!</string>
	<string name="warning_invalid_port">\n- A valid port must be an integer value between 0 and 65535!</string>
	<string name="warning_empty_port">\n- A valid port must be given!</string>
	<string name="warning_same_address_different_protocol">A remote client with IP address %1$s and port %2$s, using the \'%3$s\' protocol, already exists.\n\nAre you sure you want to add the same address again, using a different protocol?</string>
	<string name="warning_same_address_same_protocol">A remote client with IP address %1$s and port %2$s, using the \'%3$s\' protocol, already exists in the database.</string>
	<string name="command_namespace">root cmd</string>
</resources>