<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<EditText
		android:id="@+id/add_ip_address"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/enter_a_valid_ip_address"
		android:importantForAutofill="no"
		android:inputType="textPersonName"
		android:text="@string/add_ip_address" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<EditText
			android:id="@+id/add_port"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:inputType="textPersonName"
			android:text="@string/add_port"
			android:hint="@string/add_port_hint" />

		<ListView
			android:id="@+id/select_protocol"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1" />
	</LinearLayout>

</LinearLayout>