<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/indicator_panel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end|bottom"
              android:layout_marginBottom="8dp"
              android:layout_marginEnd="64dp"
              android:layout_marginRight="64dp"
              android:orientation="horizontal">

	<ImageView
		android:id="@+id/indicator_osc"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/the_current_osc_status"
		android:padding="4dp"
		android:src="@drawable/osc_paused"/>

	<ImageView
		android:id="@+id/indicator_color"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/the_current_color_mode"
		android:padding="4dp"
		android:src="@drawable/rgb_indicator"/>

	<ImageView
		android:id="@+id/indicator_interaction"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/the_current_interaction_mode"
		android:padding="4dp"
		android:src="@drawable/interaction_none_indicator"/>

	<ImageView
		android:id="@+id/indicator_camera"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/curr_active_camera"
		android:padding="4dp"
		android:src="@drawable/indicator_camera_back"/>

</LinearLayout>