<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/debug_settings"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

	<TextView
		android:id="@+id/debug_explanation"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:text="@string/debug_eplanation"/>

	<View style="@style/Divider"/>

	<androidx.appcompat.widget.SwitchCompat
		android:id="@+id/hide_pixel_image"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:checked="false"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:text="@string/hide_pixel_image_overlay"/>

	<View style="@style/Divider"/>

	<androidx.appcompat.widget.SwitchCompat
		android:id="@+id/add_packet_drops"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:checked="false"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:text="@string/count_messages"/>

</LinearLayout>