<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/resolution_settings"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

	<LinearLayout
		android:id="@+id/resolution"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false"
		android:orientation="horizontal">

		<LinearLayout
			android:id="@+id/resolution_horizontal"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/horizontal_resolution"/>

			<EditText
				android:id="@+id/resolution_horizontal_field"
				style="@style/EditTextPadding"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:digits="1234567890"
				android:inputType="number"
				android:nextFocusDown="@+id/resolution_vertical_field"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/resolution_vertical"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/vertical_resolution"/>

			<EditText
				android:id="@+id/resolution_vertical_field"
				style="@style/EditTextPadding"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:digits="1234567890"
				android:inputType="number"
				android:nextFocusDown="@+id/calulation_period_field"/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/camera_output_params"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:baselineAligned="false"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/set_calculation_period"/>

			<EditText
				android:id="@+id/calulation_period_field"
				style="@style/EditTextPadding"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:digits="123456789"
				android:inputType="number"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:baselineAligned="false"
			android:orientation="vertical">

			<CheckBox
				android:id="@+id/fix_framerate_checkbox"
				style="@style/CheckBoxMargin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/fixed_frame_rate"/>

			<CheckBox
				android:id="@+id/normalize_output_checkbox"
				style="@style/CheckBoxMargin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/normalize_output_text"/>

			<CheckBox
				android:id="@+id/remember_activated_checkbox"
				style="@style/CheckBoxMargin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/remember_activated_text"/>
		</LinearLayout>

	</LinearLayout>

</LinearLayout>
