<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/pixel_editor_toolbox"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end"
              android:layout_marginBottom="50dp"
              android:layout_marginEnd="50dp"
              android:layout_marginRight="50dp"
              android:background="@drawable/black_rounded_rect"
              android:orientation="horizontal">

	<ImageButton
		android:id="@+id/delete_edits"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:layout_margin="8dp"
		android:src="@drawable/delete"
		android:background="@drawable/editor_button_shape"
		android:contentDescription="@string/delete_edits_on_pixels"/>

	<ImageButton
		android:id="@+id/quick_edit_pixels"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:layout_margin="8dp"
		android:src="@drawable/quick_edit"
		android:background="@drawable/editor_button_shape"
		android:contentDescription="@string/quickly_select_pixels"/>

	<ImageButton
		android:id="@+id/edit_pixels"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:layout_margin="8dp"
		android:src="@drawable/quick_edit"
		android:background="@drawable/editor_button_shape"
		android:contentDescription="@string/select_pixels_stepwise"/>

</LinearLayout>